--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -1,1 +1,12 @@
 <h1>Welcome to the home page!</h1>
+
+{{template "template"}}
+{{define "template"}}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at consequat lorem. Nam justo ante, fringilla vel
+aliquet a, elementum vel lorem. Morbi in convallis lectus. Cras pulvinar lacus sed leo pulvinar tincidunt. Cras nec
+dolor tortor. Nullam aliquam metus sit amet elit ornare, efficitur euismod mauris sagittis. Cras mattis quis urna vitae
+tempor. Duis hendrerit accumsan augue id tincidunt. Suspendisse euismod lectus eu lobortis sollicitudin. Donec leo odio,
+condimentum eu quam et, lacinia pretium orci. Proin ac pharetra erat. Cras blandit tempus mi, in lacinia nisi egestas
+gravida. Donec id turpis egestas, elementum nisl in, hendrerit metus. Cras sodales ligula mattis, pharetra augue non,
+efficitur risus. Vestibulum eget blandit nunc.
+{{end}}
