--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,2 +1,4 @@
+{{define "page"}}
 <h1>Contact Page</h1>
 <p>To get in touch email me at <a href="mailto:josh@mail.com">josh@mail.com</a></p>
+{{end}}
