--- a/templates/faqs.gohtml
+++ b/templates/faqs.gohtml
@@ -1,9 +1,12 @@
+{{define "page"}}
+
 <h1>FAQ Page</h1>
 <ul>
     {{range .}}
     {{template "qa" .}}
     {{end}}
 </ul>
+{{end}}
 
 {{define "qa"}}
 <li>
