--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -1,6 +1,9 @@
+{{define "page"}}
 <h1>Welcome to the home page!</h1>
-
 {{template "template"}}
+{{end}}
+
+
 {{define "template"}}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at consequat lorem. Nam justo ante, fringilla vel
 aliquet a, elementum vel lorem. Morbi in convallis lectus. Cras pulvinar lacus sed leo pulvinar tincidunt. Cras nec
