--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -1,5 +1,5 @@
 {{define "page"}}
-<h1>Welcome to the home page!</h1>
+<h1 class="text-3xl font-bold tracking-tight underline"> Hello world! </h1>
 {{template "template"}}
 {{end}}
 
