--- a/templates/layout.gohtml
+++ b/templates/layout.gohtml
@@ -1,6 +1,32 @@
 <html>
 
+<head>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+</head>
+
 <body>
+    <header class="bg-gradient-to-r from-blue-800 to-indigo-800 text-white">
+        <nav class="px-8 py-6 flex items-center space-x-12">
+            <div class="text-4xl font-serif">PhotoBank</div>
+            <div class="flex-grow">
+                <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/">
+                    Home
+                </a>
+                <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/contact">
+                    Contact
+                </a>
+                <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/faq">
+                    FAQ
+                </a>
+            </div>
+            <div class="space-x-4">
+                <a href="#">Sign in</a>
+                <a href="#" class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded">
+                    Sign up
+                </a>
+            </div>
+        </nav>
+    </header>
     {{template "page" .}}
 </body>
 
