--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -4,35 +4,20 @@
     <h1 class="pt-4 pb-8 text-center text-3xl font-bold text-gray-900">
       Start sharing your photos today!
     </h1>
-    <form action="/signup" method="post">
+    <form action="/users" method="post">
       <div class="py-2">
         <label for="email" class="text-sm font-semibold text-gray-800">
           Email Address
         </label>
-        <input
-          name="email"
-          id="email"
-          type="email"
-          placeholder="Email address"
-          required
-          autocomplete="email"
-          class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500
-            text-gray-800 rounded"
-        />
+        <input name="email" id="email" type="email" placeholder="Email address" required autocomplete="email" class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500
+            text-gray-800 rounded">
       </div>
       <div class="py-2">
         <label for="password" class="text-sm font-semibold text-gray-800">
           Password
         </label>
-        <input
-          name="password"
-          id="password"
-          type="password"
-          placeholder="Password"
-          required
-          class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500
-            text-gray-800 rounded"
-        />
+        <input name="password" id="password" type="password" placeholder="Password" required class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500
+            text-gray-800 rounded">
       </div>
       <div class="py-4">
         <button class="w-full py-4 px-2 bg-indigo-600 hover:bg-indigo-700
